; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/b43legacy/extr_main.c_b43legacy_ram_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/b43legacy/extr_main.c_b43legacy_ram_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43legacy_wldev = type { i32 }

@B43legacy_MMIO_MACCTL = common dso_local global i32 0, align 4
@B43legacy_MACCTL_BE = common dso_local global i32 0, align 4
@B43legacy_MMIO_RAM_CONTROL = common dso_local global i32 0, align 4
@B43legacy_MMIO_RAM_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43legacy_wldev*, i32, i32)* @b43legacy_ram_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b43legacy_ram_write(%struct.b43legacy_wldev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.b43legacy_wldev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.b43legacy_wldev* %0, %struct.b43legacy_wldev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = srem i32 %8, 4
  %10 = icmp ne i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @B43legacy_WARN_ON(i32 %11)
  %13 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %4, align 8
  %14 = load i32, i32* @B43legacy_MMIO_MACCTL, align 4
  %15 = call i32 @b43legacy_read32(%struct.b43legacy_wldev* %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @B43legacy_MACCTL_BE, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %3
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @swab32(i32 %21)
  store i32 %22, i32* %6, align 4
  br label %23

23:                                               ; preds = %20, %3
  %24 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %4, align 8
  %25 = load i32, i32* @B43legacy_MMIO_RAM_CONTROL, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @b43legacy_write32(%struct.b43legacy_wldev* %24, i32 %25, i32 %26)
  %28 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %4, align 8
  %29 = load i32, i32* @B43legacy_MMIO_RAM_DATA, align 4
  %30 = load i32, i32* %6, align 4
  %31 = call i32 @b43legacy_write32(%struct.b43legacy_wldev* %28, i32 %29, i32 %30)
  ret void
}

declare dso_local i32 @B43legacy_WARN_ON(i32) #1

declare dso_local i32 @b43legacy_read32(%struct.b43legacy_wldev*, i32) #1

declare dso_local i32 @swab32(i32) #1

declare dso_local i32 @b43legacy_write32(%struct.b43legacy_wldev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
